Remove Spotify API
(cherry picked from commit b8684b92c53b47600082fbabca9c9b131fb31a29)